# video_writer

./: CMakeLists.txt  README.md  package.xml
ros/include/video_writer/: video_writer_node.h
ros/launch/: camera.launch  video_writer.launch
ros/src/: video_writer_node.cpp
